feat: json support

--- a/CS260DProject.ipynb
+++ b/CS260DProject.ipynb
@@ -21,12 +21,12 @@
     "# accelerate launch train.py --config_file configs/full/pythia-70m_full.yml --wandb_key \"0944191bcf43ea6231189f995e76d66cc523c13d\" > 70M_Full_training_output.log 2>&1\n",
     "\n",
     "#70M Traj\n",
-    "# python run_distributed_trajectories.py --model_path res/pythia-70m_full/output --config_file configs/full/pythia-70m_cirriculum_full.yml --checkpoints all\n",
+    "# python run_distributed_trajectories.py --model_path res/pythia-70m_full/output --config_file configs/full/pythia-70m_cirriculum_full.yml --checkpoints all > traj_output.log 2>&1\n",
     "\n",
     "#410M S2L\n",
-    "# accelerate launch train.py --config_file configs/s2l/pythia-410m_s2l.yml --wandb_key \"0944191bcf43ea6231189f995e76d66cc523c13d\"\n",
+    "# accelerate launch train.py --config_file configs/s2l/pythia-410m_s2l.yml --wandb_key \"0944191bcf43ea6231189f995e76d66cc523c13d\" > 410M_S2L_output.log 2>&1\n",
     "#410M FULL\n",
-    "# accelerate launch train.py --config_file configs/full/pythia-410m_full.yml --wandb_key \"0944191bcf43ea6231189f995e76d66cc523c13d\""
+    "# accelerate launch train.py --config_file configs/full/pythia-410m_full.yml --wandb_key \"0944191bcf43ea6231189f995e76d66cc523c13d\"> 410M_FULL_output.log 2>&1"
    ]
   },
   {
