feat: completely new pipeline for training

--- a/CS260DProject.ipynb
+++ b/CS260DProject.ipynb
@@ -3,30 +3,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11e51ac3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pip install accelerate wandb faiss-cpu transformers datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a30a7425",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#70M FULL\n",
-    "# accelerate launch train.py --config_file configs/full/pythia-70m_full.yml --wandb_key \"0944191bcf43ea6231189f995e76d66cc523c13d\" > 70M_Full_training_output.log 2>&1\n",
+    "#70M Full\n",
+    "# python TRL/train.py --config TRL/configs/70M_Full.yml\n",
+    "\n",
+    "#410M Full\n",
+    "# python TRL/train.py --config TRL/configs/410M_Full.yml\n",
     "\n",
     "#70M Traj\n",
-    "# python get_trajectories.py --model_path res/pythia-70m_full/output --config_file configs/full/pythia-70m_cirriculum_full.yml --checkpoints all > traj_output.log 2>&1\n",
+    "# python TRL/selection/get_trajectories.py \\\n",
+    "#     --checkpoint_dir ./results/pythia-70M-full \\\n",
+    "#     --dataset_name TIGER-Lab/MathInstruct \\\n",
+    "#     --n_samples 80000\n",
     "\n",
-    "#410M S2L\n",
-    "# accelerate launch train.py --config_file configs/s2l/pythia-410m_s2l.yml --wandb_key \"0944191bcf43ea6231189f995e76d66cc523c13d\" > 410M_S2L_output.log 2>&1\n",
-    "#410M FULL\n",
-    "# accelerate launch train.py --config_file configs/full/pythia-410m_full.yml --wandb_key \"0944191bcf43ea6231189f995e76d66cc523c13d\"> 410M_FULL_output.log 2>&1"
+    "#70M S2L creation\n",
+    "# python TRL/selection/data_selection.py --config TRL/configs/selection/s2l.yml\n",
+    "\n",
+    "#410M S2L Training\n",
+    "# python TRL/train.py --config TRL/configs/410M_S2L.yml\n"
    ]
   },
   {
@@ -44,7 +41,7 @@
     "\n",
     "#full\n",
     "print(\"Testing Pythia 410M Trained On Full Dataset On GSM8K\")\n",
-    "evaluate_model_accuracy(model_path=\"res/pythia-410m_cirriculum_full/output\",\n",
+    "evaluate_model_accuracy(model_path=\"results/pythia-410m_cirriculum_full/output\",\n",
     "                        dataset_path=\"openai/gsm8k\",\n",
     "                        start_idx=0,\n",
     "                        end_idx=100)\n",
