feat: new train file

--- a/CS260DProject.ipynb
+++ b/CS260DProject.ipynb
@@ -8,10 +8,10 @@
    "outputs": [],
    "source": [
     "#70M Full\n",
-    "# python TRL/train.py --config TRL/configs/70M_Full.yml\n",
+    "# python TRL/Train.py --config TRL/configs/70M_Full.yml\n",
     "\n",
     "#410M Full\n",
-    "# python TRL/train.py --config TRL/configs/410M_Full.yml\n",
+    "# python TRL/Train.py --config TRL/configs/410M_Full.yml\n",
     "\n",
     "#70M Traj\n",
     "# python TRL/selection/get_trajectories.py \\\n",
@@ -23,7 +23,7 @@
     "# python TRL/selection/data_selection.py --config TRL/configs/selection/s2l.yml\n",
     "\n",
     "#410M S2L Training\n",
-    "# python TRL/train.py --config TRL/configs/410M_S2L.yml\n"
+    "# python TRL/Train.py --config TRL/configs/410M_S2L.yml\n"
    ]
   },
   {
