feat: new print statements

--- a/CS260DProject.ipynb
+++ b/CS260DProject.ipynb
@@ -3,6 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dacfb3c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pip install accelerate wandb faiss-cpu transformers datasets trl hf_transfer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a30a7425",
    "metadata": {},
    "outputs": [],
