feat: small patches

--- a/CS260DProject.ipynb
+++ b/CS260DProject.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pip install accelerate wandb faiss-cpu transformers datasets trl hf_transfer"
+    "# pip install accelerate wandb faiss-cpu transformers datasets trl hf_transfer tqdm"
    ]
   },
   {
@@ -27,7 +27,7 @@
     "# python TRL/selection/get_trajectories.py \\\n",
     "#     --checkpoint_dir ./results/pythia-70M-full \\\n",
     "#     --dataset_name TIGER-Lab/MathInstruct \\\n",
-    "#     --n_samples 80000\n",
+    "#     --n_samples 120000\n",
     "\n",
     "#70M S2L creation\n",
     "# python TRL/selection/data_selection.py --config TRL/configs/selection/s2l.yml\n",
