feat: updated eval

--- a/CS260DProject.ipynb
+++ b/CS260DProject.ipynb
@@ -47,11 +47,11 @@
     "import sys\n",
     "if 'evaluate' in sys.modules:\n",
     "    importlib.reload(sys.modules['evaluate'])\n",
-    "from evaluate import evaluate_model_accuracy\n",
+    "from TRL.Evaluate import evaluate_model_accuracy\n",
     "\n",
     "#full\n",
     "print(\"Testing Pythia 410M Trained On Full Dataset On GSM8K\")\n",
-    "evaluate_model_accuracy(model_path=\"results/pythia-410m_cirriculum_full/output\",\n",
+    "evaluate_model_accuracy(model_path=\"results/pythia-410M-full/checkpoint-11250\",\n",
     "                        dataset_path=\"openai/gsm8k\",\n",
     "                        start_idx=0,\n",
     "                        end_idx=100)\n",
