feat: eval script

--- a/CS260DProject.ipynb
+++ b/CS260DProject.ipynb
@@ -33,35 +33,11 @@
     "# python TRL/selection/data_selection.py --config TRL/configs/selection/s2l.yml\n",
     "\n",
     "#410M S2L Training\n",
-    "# python TRL/Train.py --config TRL/configs/410M_S2L.yml\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38f56caa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import importlib\n",
-    "import sys\n",
-    "if 'evaluate' in sys.modules:\n",
-    "    importlib.reload(sys.modules['evaluate'])\n",
-    "from TRL.Evaluate import evaluate_model_accuracy\n",
+    "# python TRL/Train.py --config TRL/configs/410M_S2L.yml\n",
     "\n",
-    "#full\n",
-    "print(\"Testing Pythia 410M Trained On Full Dataset On GSM8K\")\n",
-    "evaluate_model_accuracy(model_path=\"results/pythia-410M-full/checkpoint-11250\",\n",
-    "                        dataset_path=\"openai/gsm8k\",\n",
-    "                        start_idx=0,\n",
-    "                        end_idx=100)\n",
     "\n",
-    "# #s2l\n",
-    "# print(\"Testing Pythia 410M Trained On S2L Dataset On GSM8K \")\n",
-    "# evaluate_model_accuracy(model_path=\"res/pythia-410m_cirriculum_s2l/output\",\n",
-    "#                         dataset_path=\"openai/gsm8k\",\n",
-    "#                         start_idx=0,\n",
-    "                        # end_idx=100)\n"
+    "#Eval\n",
+    "# python TRL/Evaluate.py\n"
    ]
   },
   {
