feat: new configs and new heuristics

--- a/CS260DProject.ipynb
+++ b/CS260DProject.ipynb
@@ -32,12 +32,25 @@
     "#70M S2L creation\n",
     "# python TRL/selection/data_selection.py --config TRL/configs/selection/s2l.yml\n",
     "\n",
+    "#70M avg creation\n",
+    "# python TRL/selection/data_selection.py --config TRL/configs/selection/avg.yml\n",
+    "\n",
+    "#70M overall creation\n",
+    "# python TRL/selection/data_selection.py --config TRL/configs/selection/overall.yml\n",
+    "\n",
     "#410M S2L Training\n",
     "# python TRL/Train.py --config TRL/configs/410M_S2L.yml\n",
     "\n",
+    "#410M Avg\n",
+    "# python TRL/Train.py --config TRL/configs/410M_Avg.yml\n",
+    "\n",
+    "#410M Overall\n",
+    "# python TRL/Train.py --config TRL/configs/410M_Overall.yml\n",
     "\n",
     "#Eval\n",
-    "# python TRL/Evaluate.py\n"
+    "# python TRL/Evaluate.py\n",
+    "\n",
+    "\n"
    ]
   },
   {
